--- a/index.css
+++ b/index.css
@@ -1,9 +1,77 @@
-header {
-    text-align: center;
+.jobbra {
+    float:right;
 }
 
 .container {
+    display: grid;
+    grid-template-columns: auto auto auto;
+    grid-template-rows: 150px 150px 50px 50px 50px 50px 50px 50px; 
+    row-gap: 15px;
+    column-gap: 30px;
+    
+}
+
+.item1 {
+    color:white;
+    background-color: rgb(82, 41, 216);
+    text-align:center;
+    border-radius: 25px;
+    border-top-left-radius:0;
+    border-top-right-radius:0;
+    grid-column: 1 / span 1;
+    grid-row: 1 / span 2 ; 
+  }
+
+  .item2 {
+    text-align:left;
+    border-radius: 25px;
+    /*grid-column: 1 / span 1;
+    grid-row: 1 / span 2 ; */
+  }
+
+  .item3 {
+    background-color: rgb(204, 170, 170);
+    text-align:left;
+    float:left;
     border-radius: 20px;
+    /*grid-column: 1 / span 1;
+    grid-row: 1 / span 2 ; */
+  }
+
+  .item4 {
+    background-color: rgb(255, 249, 168);
+    text-align:left;
+    float:left;
+    border-radius: 20px;
+  }
+   
+  .item5 {
+    background-color: rgb(206, 252, 255);
+    text-align:left;
+    float:left;
+    border-radius: 20px;
+  }
+
+  .item6 {
+    background-color: rgb(163, 165, 255);
+    text-align:left;
+    float:left;
+    border-radius: 20px;
+  }
+
+  .item7 {
+    background-color: rgb(139, 139, 139);
+    text-align:center;
+    border-radius: 50px;
+    /*grid-column: 2 / span 2;
+    grid-row: 6 / span 7 ; */
+  }
+
+@media only screen and (max-width: 750px) {
+
+    .container{
+        grid-template-columns: auto;
+      }
 }
 
 
