--- a/index.css
+++ b/index.css
@@ -1,13 +1,23 @@
 .jobbra {
-    float:right;
+    float:right; 
+    color: black;
+}
+
+.kor {
+  border-radius: 100px;
+  background-color:  rgb(72, 53, 134);
+  height: 100px;
+  width: 100px;
+  place-content: center;
 }
 
 .container {
     display: grid;
-    grid-template-columns: auto auto auto;
-    grid-template-rows: 150px 150px 50px 50px 50px 50px 50px 50px; 
-    row-gap: 15px;
-    column-gap: 30px;
+    grid-template-columns: auto auto ;
+    grid-template-rows: 50px 50px 50px 50px 50px 50px; 
+    row-gap: 10px;
+    column-gap: 20px;
+  
     
 }
 
@@ -16,62 +26,131 @@
     background-color: rgb(82, 41, 216);
     text-align:center;
     border-radius: 25px;
-    border-top-left-radius:0;
-    border-top-right-radius:0;
     grid-column: 1 / span 1;
-    grid-row: 1 / span 2 ; 
+    grid-row: 1 / span 6 ; 
+  
   }
 
   .item2 {
-    text-align:left;
-    border-radius: 25px;
-    /*grid-column: 1 / span 1;
-    grid-row: 1 / span 2 ; */
+    float:left;
+    border-radius: 25px; 
+    grid-column: 2 ;
+    grid-row: 1 ; 
   }
 
   .item3 {
     background-color: rgb(204, 170, 170);
-    text-align:left;
     float:left;
+    color:  rgb(179, 30, 30);
     border-radius: 20px;
-    /*grid-column: 1 / span 1;
-    grid-row: 1 / span 2 ; */
+    grid-column: 2 ;
+    grid-row: 2 ; 
   }
 
   .item4 {
     background-color: rgb(255, 249, 168);
-    text-align:left;
     float:left;
+    color:  rgb(167, 155, 0);
     border-radius: 20px;
+    grid-column: 2 ;
+    grid-row: 3 ; 
   }
    
   .item5 {
     background-color: rgb(206, 252, 255);
-    text-align:left;
     float:left;
+    color:  rgb(5, 192, 206);
     border-radius: 20px;
+    grid-column: 2 ;
+    grid-row: 4 ; 
   }
 
   .item6 {
     background-color: rgb(163, 165, 255);
-    text-align:left;
     float:left;
-    border-radius: 20px;
+    color:  rgb(20, 24, 255);
+    border-radius: 20px; 
+    grid-column: 2 ;
+    grid-row: 5 ; 
   }
 
   .item7 {
     background-color: rgb(139, 139, 139);
     text-align:center;
     border-radius: 50px;
-    /*grid-column: 2 / span 2;
-    grid-row: 6 / span 7 ; */
+    grid-column: 2 ;
+    grid-row: 6 ; 
   }
 
 @media only screen and (max-width: 750px) {
 
-    .container{
-        grid-template-columns: auto;
+  .container {
+    display: grid;
+    grid-template-columns: auto ;
+    grid-template-rows: 150px 150px 50px 50px 50px 50px; 
+    row-gap: 15px;
+    column-gap: 30px;
+  }
+      .item1 {
+        color:white;
+        background-color: rgb(82, 41, 216);
+        text-align:center;
+        border-radius: 25px;
+        border-top-left-radius:0;
+        border-top-right-radius:0;
+        grid-column: 1 / span 1;
+        grid-row: 1 / span 2 ; 
+      
       }
-}
-
-
+    
+      .item2 {
+        float:left;
+        border-radius: 25px; 
+        grid-column: 1 ;
+        grid-row: 3;
+      }
+    
+      .item3 {
+        background-color: rgb(204, 170, 170);
+        float:left;
+        color:  rgb(179, 30, 30);
+        border-radius: 20px;
+        grid-column: 1 ;
+        grid-row: 4;
+      }
+    
+      .item4 {
+        background-color: rgb(255, 249, 168);
+        float:left;
+        color:  rgb(167, 155, 0);
+        border-radius: 20px;
+        grid-column: 1 ;
+        grid-row: 5;
+      }
+       
+      .item5 {
+        background-color: rgb(206, 252, 255);
+        float:left;
+        color:  rgb(5, 192, 206);
+        border-radius: 20px;
+        grid-column: 1 ;
+        grid-row: 6;
+      }
+    
+      .item6 {
+        background-color: rgb(163, 165, 255);
+        float:left;
+        color:  rgb(20, 24, 255);
+        border-radius: 20px;
+        grid-column: 1 ;
+        grid-row: 7;
+      }
+    
+      .item7 {
+        background-color: rgb(139, 139, 139);
+        text-align:center;
+        border-radius: 50px;
+        grid-column: 1 ;
+        grid-row: 8;
+      }
+    }
