--- a/index.css
+++ b/index.css
@@ -24,7 +24,7 @@
 
 .container {
     display: grid;
-    grid-template-columns: auto auto ;
+    grid-template-columns: 1fr 1fr ;
     grid-template-rows: 50px 50px 50px 50px 50px 50px; 
     row-gap: 10px;
     column-gap: 20px;
